--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -102,6 +102,7 @@
                     />
 
                 <EditText
+                    android:id="@+id/xnama_lengkap"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/bg_input_edit"
@@ -135,6 +136,7 @@
                     />
 
                 <EditText
+                    android:id="@+id/xbio"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/bg_input_edit"
@@ -170,6 +172,7 @@
                     />
 
                 <EditText
+                    android:id="@+id/xusername"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/bg_input_edit"
@@ -204,11 +207,12 @@
                     />
 
                 <EditText
+                    android:id="@+id/xpassword"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/bg_input_edit"
                     android:fontFamily="@font/mmedium"
-                    android:inputType="textPassword"
+                    android:inputType="text"
                     android:lines="1"
                     android:paddingLeft="12dp"
                     android:textColor="@color/BlackPrimary"
@@ -236,6 +240,7 @@
                     />
 
                 <EditText
+                    android:id="@+id/xemail_address"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/bg_input_edit"
@@ -287,9 +292,10 @@
                 android:id="@+id/photo_edit_profile"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
-                android:src="@drawable/foto_ogi" />
+                android:src="@drawable/icon_nopic" />
         </com.github.florent37.shapeofview.shapes.CircleView>
         <Button
+            android:id="@+id/btn_add_new_photo"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:background="@drawable/bg_btn_plus"
@@ -302,7 +308,7 @@
             app:layout_constraintTop_toTopOf="@+id/imageView5" />
 
         <Button
-            android:id="@+id/btn_continue2"
+            android:id="@+id/btn_save"
             android:layout_width="220dp"
             android:layout_height="55dp"
             android:layout_marginTop="28dp"
@@ -326,7 +332,7 @@
             android:background="@drawable/bg_btn_white_primary"
             android:gravity="center"
             android:orientation="vertical"
-            app:layout_constraintEnd_toStartOf="@+id/btn_continue2"
+            app:layout_constraintEnd_toStartOf="@+id/btn_save"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
