--- a/app/src/main/res/layout/activity_my_ticket_detail.xml
+++ b/app/src/main/res/layout/activity_my_ticket_detail.xml
@@ -65,51 +65,35 @@
                 android:src="@drawable/ic_ticket_buy" />
 
             <LinearLayout
-                android:layout_width="120dp"
+                android:layout_width="140dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="12dp"
                 android:layout_marginTop="6dp"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/photo_spot_ticket"
+                    android:id="@+id/xnama_wisata"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/mregular"
-                    android:text="Menara Pisa"
+
                     android:textColor="@color/BlackPrimary"
                     android:textSize="16sp" />
 
                 <TextView
+                    android:id="@+id/xlokasi"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginTop="4dp"
                     android:fontFamily="@font/mlight"
-                    android:text="Pisa City, Italy"
+
                     android:textColor="@color/grayPrimary"
                     android:textSize="12sp" />
 
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="-7dp"
-                android:layout_marginTop="15dp"
-                android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="-1dp"
-                    android:layout_marginRight="12dp"
-                    android:fontFamily="@font/mlight"
-                    android:text="2 Tickets"
-                    android:textColor="@color/BluePrimary"
-                    android:textSize="16sp" />
-
-            </LinearLayout>
         </LinearLayout>
 
         <View
@@ -134,11 +118,12 @@
                 android:textSize="20sp" />
 
             <TextView
+                android:id="@+id/xdate_wisata"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:fontFamily="@font/mlight"
-                android:text="Jan 22 2019"
+
                 android:textColor="@color/grayPrimary"
                 android:textSize="16sp" />
 
@@ -159,11 +144,12 @@
                 android:textSize="20sp" />
 
             <TextView
+                android:id="@+id/xtime_wisata"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:fontFamily="@font/mlight"
-                android:text="10 PM to 12 PM"
+
                 android:textColor="@color/grayPrimary"
                 android:textSize="16sp" />
 
@@ -184,11 +170,12 @@
                 android:textSize="20sp" />
 
             <TextView
+                android:id="@+id/xketentuan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:fontFamily="@font/mlight"
-                android:text="Anak yang berumur lebih dari 3 \ntahun wajib membeli tiket untuk masuk kedalam landmark"
+
                 android:textColor="@color/grayPrimary"
                 android:textSize="16sp" />
 
@@ -207,38 +194,65 @@
 
 
     </LinearLayout>
-
-    <Button
-        android:id="@+id/btn_buy_ticket"
-        android:layout_width="220dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/bg_btn_green_primary"
-        android:fontFamily="@font/mmedium"
-        android:text="REFUND"
-        android:textColor="#ffff"
-        android:textSize="22sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
-
     <LinearLayout
-        android:id="@+id/btn_back"
-        android:layout_width="90dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="12dp"
-        android:background="@drawable/bg_btn_white_primary"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toStartOf="@+id/btn_buy_ticket"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+
+        android:layout_marginEnd="24dp"
+        android:orientation="horizontal"
+        android:weightSum="4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="32dp"
-            android:src="@drawable/ic_back"
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-            />
+            <LinearLayout
+                android:id="@+id/btn_back"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:background="@drawable/bg_btn_white_primary"
+                android:gravity="center"
+                android:orientation="vertical"
+                >
+
+                <ImageView
+                    android:layout_width="35dp"
+                    android:layout_height="32dp"
+                    android:src="@drawable/ic_back"
+
+                    />
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_weight="3"
+            android:orientation="vertical">
+
+            <Button
+
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+
+                android:background="@drawable/bg_btn_green_primary"
+                android:fontFamily="@font/mmedium"
+                android:text="REFUND NOW"
+                android:textColor="#ffff"
+                android:textSize="22sp"
+                />
+
+
+        </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
